--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 tiktoken = "^0.8.0"
 langchain = "^0.3.7"
 langchain-openai = "^0.2.9"
+rich = "^13.9.4"
 
 
 [build-system]
